<resources>
    <string name="app_name">Toast Interceptor</string>
    <string name="action_settings">Settings</string>
    <string name="event_time">Event Time</string>
    <string name="options_icon">Options Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="toast_content">Toast Content</string>
    <string name="package_name">Package Name</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="perm_message">ToastInterceptor takes advantage of Android Accessibility service to capture system wide toast messages.  Please enable Accessibility permission in Settings.</string>
    <string name="perm_title">ToastInterceptor - Accessibility Permission</string>
    <string name="perm_enable_info">Please find and enable ToastInterceptor in accessibility services</string>
</resources>
