<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:hint="@string/event_time"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/options_icon"
            android:src="@drawable/ic_garbage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="middle"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_pkgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/package_name"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toast_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>